feat: complete Round 2 5-Lens code review remediations and test suite expansion
- Architect Lens: synchronize and flush tupleBatch before HDFS writer closure, add HDFS login exception recovery, isolate SharedPulsarClient instances with composite keys, implement PulsarSpout activate/deactivate SPI
- SRE Lens: ensure non-blocking metric reads, deterministic comparator tie-breaking, safe cache eviction error handling, non-blocking backoff bypass
- Security Lens: verify Base64 credential decoding, Kerberos ObjectInputFilter allowlist, Avro schema serialization, sensitive logging prevention
- QA Lens: fix 32-bit integer overflow in parseJvmHeapMemByChildOpts, add defensive bounds checks across utility methods
- CodeReview Lens: modernize Java 11 reflection, remove dead code and placeholder strings, enforce UTF-8 charsets, parameterize sequence formats and SLF4J logs, clean Kafka dependencies
- Testing: expanded unit test suites across all modules (88 tests passing, 0 failures)